<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_person_black"
            android:title="@string/account"
            app:showAsAction="always"/>
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black"
            android:title="@string/checkout"
            app:showAsAction="always"/>
        <item
            android:id="@+id/nav_disc"
            android:icon="@drawable/ic_tag_black"
            android:title="@string/disc"
            app:showAsAction="always"/>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/title_home"
            app:showAsAction="always"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black"
            android:title="@string/logout"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_add_shopping_cart_black"
            android:title="@string/order_history_text"
            app:showAsAction="ifRoom"/>
    </group>


</menu>
