<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/custom_padding">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="1dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    style="@style/CustomTVHeadingStyleBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/action_register_text" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/outline"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:gravity="center"
                        android:text="@string/have_account" />
                    <TextView
                        android:id="@+id/login_tv_in_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:gravity="center"
                        android:text="@string/click_here" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_detail_text" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/outline"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/first_name_text" />

                <EditText
                    android:id="@+id/fNameET"
                    style="@style/CustomETStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/first_name_hint"
                    android:maxLength="32"
                    android:textColorHint="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/last_name_text" />

                <EditText
                    android:id="@+id/lName"
                    style="@style/CustomETStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/last_name_hint"
                    android:maxLength="32"
                    android:textColorHint="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/email_text" />

                <EditText
                    android:id="@+id/emailET"
                    style="@style/CustomEmailETStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/email_hint"
                    android:maxLength="96"
                    android:textColorHint="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/phone_text" />

                <EditText
                    android:id="@+id/contactET"
                    style="@style/CustomETStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/phone_hint"
                    android:maxLength="32"
                    android:textColorHint="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_password_text" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/outline" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/password_text" />

                <EditText
                    android:id="@+id/passET"
                    style="@style/CustomPassETStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:textAlignment="viewStart"
                    android:gravity="start|center_vertical"
                    android:hint="@string/password_hint"
                    android:maxLength="32"
                    android:textColorHint="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/confirm_password_text" />

                <EditText
                    android:id="@+id/rePassET"
                    style="@style/CustomPassETStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/confirm_password_text"
                    android:textAlignment="viewStart"
                    android:gravity="start|center_vertical"
                    android:maxLength="32"
                    android:textColorHint="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/newsletter_text" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/outline" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/subscribe_text" />

                <RadioGroup
                    android:id="@+id/newsletterRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Yes_text" />

                    <RadioButton
                        android:id="@+id/rbNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginStart="25dp"
                        android:text="@string/No_text" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/terms_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:textStyle="normal"
                        android:text="@string/privacy_policy_statement" />

                    <TextView
                        android:id="@+id/privacy_policy_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:text="@string/privacy_policy_text_u"
                        android:textColor="@android:color/holo_blue_dark" />

                </LinearLayout>

                <Button
                    android:id="@+id/registerBtn"
                    style="@style/CustomButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:text="@string/action_register_text" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </ScrollView>

</LinearLayout>