<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/custom_padding">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="1dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/edit_address_text" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/outline" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/first_name_text" />

                <EditText
                    android:id="@+id/f_name_et"
                    style="@style/CustomETStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/first_name_hint"
                    android:maxLength="32"
                    android:textColorHint="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/last_name_text" />

                <EditText
                    android:id="@+id/l_name_et"
                    style="@style/CustomETStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/last_name_hint"
                    android:maxLength="32"
                    android:textColorHint="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/company_text" />

                <EditText
                    android:id="@+id/company_et"
                    style="@style/CustomEmailETStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/company_text"
                    android:maxLength="96"
                    android:textColorHint="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/address_text" />

                <EditText
                    android:id="@+id/address1_et"
                    style="@style/CustomETStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/address_text"
                    android:maxLength="32"
                    android:textColorHint="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/Address2_text" />

                <EditText
                    android:id="@+id/address2_et"
                    style="@style/CustomETStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/Address2_text"
                    android:maxLength="32"
                    android:textColorHint="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/post_code_text" />

                <EditText
                    android:id="@+id/post_code_et"
                    style="@style/CustomETStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/post_code_text"
                    android:maxLength="32"
                    android:textColorHint="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/country_text" />

                <EditText
                    android:id="@+id/country_btn"
                    style="@style/CustomETStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/country_text"
                    android:maxLength="32"
                    android:textColorHint="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/state_text" />

                <EditText
                    android:id="@+id/state_btn"
                    style="@style/CustomETStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/state_text"
                    android:maxLength="32"
                    android:textColorHint="@android:color/darker_gray" />

                <Button
                    android:id="@+id/continue_btn"
                    style="@style/CustomButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:text="@string/continue_text" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </ScrollView>

</LinearLayout>