<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/custom_padding">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="1dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    style="@style/CustomTVHeadingStyleBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/action_change_pass_text" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/outline"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/password_text" />

                <EditText
                    android:id="@+id/pass_et"
                    style="@style/CustomPassETStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/new_password_text"
                    android:maxLength="32"
                    android:textColorHint="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/confirm_password_text" />

                <EditText
                    android:id="@+id/new_pass_et"
                    style="@style/CustomPassETStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/new_password_hint"
                    android:maxLength="32"
                    android:textColorHint="@android:color/darker_gray" />


                <Button
                    android:id="@+id/change_pass_btn"
                    style="@style/CustomButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:text="@string/action_change_pass_text" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </ScrollView>

</LinearLayout>